- Fixed the bg image not taking up full size - Made title of food more readable by adding a text shadow

--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -16,6 +16,11 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 .navbar
 {
     height: auto;
@@ -47,6 +52,9 @@
     right: 0;
     bottom: 0;
     width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     height: 100%;
     object-fit: cover;
     z-index: 0;
@@ -59,7 +67,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 10%, transparent 100%);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, transparent 65%);
     z-index: 1;
 }
 
@@ -77,6 +85,7 @@
 {
     font-weight: bold;
     text-color: white;
+    text-shadow: rgba(0,0,0,0.9) 0px 0px 10px;
 }
 
 .to-recipe-title
